# rneural

./: Cargo.toml  README.md
datasets/: housing.csv
src/: activations.rs  error.rs  lib.rs  main.rs  neuralnet.rs
