[package]
name = "rneural"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
csv="1.1"
serde = { version = "1.0", features = ["derive"] }
